--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
+    "vue-clickaway": "^2.2.2",
     "vue-fullpage.js": "^0.1.5",
-    "vue-slider-component": "^3.1.5"
+    "vue-router": "^3.3.4",
+    "vue-slider-component": "^3.1.5",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
